# spring-2026-lab08-siruwuu

./: README.md  pyproject.toml
personal-financial-analyst/agent/: financial_orchestrator.py
personal-financial-analyst/data/: final_report.md
personal-financial-analyst/data/agent_outputs/: negotiation_scripts.md  research_results.md  tax_analysis.md
streaming-stock-agent/: agent.py  output1.txt  output2.txt  output3.txt
