[project]
name = "advanced-agentic-patterns"
version = "0.1.0"
description = "Advanced agentic patterns lab: Multi-agent orchestration and A2A communication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.1.0",
    "litellm>=1.0.0",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
    "rich>=14.3.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "yfinance>=0.2.50",
]

[dependency-groups]
agent = [
    "claude-agent-sdk>=0.1.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_agentic_patterns"]